--- a/part2/styles.css
+++ b/part2/styles.css
@@ -3,10 +3,9 @@ body{
     margin: 0;
 }
 #header {
-    background-color: rgba(100, 100, 100, 0.8);
+    background-color: rgba(100, 100, 100, 0.7);
    color: white;
    padding: 0.6rem 1.5rem;
-   font-size: 2rem;
    align-content: center;
    justify-content: space-between;
    text-align: center;
@@ -14,11 +13,58 @@ body{
    flex-direction: row;
 }
 
-div.black{
-    background-color: black;
-    height: 100px;
-    width: 100px;
+.title{
+  font-size: 2.5rem;
 }
+
+.authenticate{
+    display: flex;
+    flex: row;
+    margin-top: 1rem;
+}
+
+.authenticate div{
+    margin: 0 0.4rem;
+}
+
+.search{
+    margin-top: 1rem;
+}
+
+.signin a{
+    background-color: #fff;
+    padding: .3rem .5rem;
+    border-radius: 3px;
+    text-decoration: none;
+    color: rgb(150,150,150);
+    font-weight: 600;
+
+}
+
+.login a{
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.search{
+    background-color: #fff;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+}
+
+.search input{
+    font-size: 1rem;
+    padding: .5rem .6rem;
+    border: none;
+    width: 45vw;
+}
+
+.search input{
+    outline: none;
+}
+
 
 div.gallery {
     border: 1px solid #ccc;
